--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ version '0.0.0.1'
 sourceCompatibility = 1.8
 
 dependencies {
-    compile 'com.google.guava:guava:+'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.code.findbugs:jsr305:3+'
+    compile 'com.google.guava:guava:+'
 }
