--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ group 'BrainSqueeze'
 version '0.0.0.1'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 
 dependencies {
     testCompile 'junit:junit:4.12'
