--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,12 @@ version '0.0.0.1'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+repositories {
+    jcenter()
+}
 
 dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.code.findbugs:jsr305:3+'
-    compile 'com.google.guava:guava:+'
+   compile(group: 'com.google.guava', name: 'guava', version: '20.0')
 }
