--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 
 dependencies {
     testCompile 'junit:junit:4.12'
+    testCompile "com.google.truth:truth:0.36"
     compile 'com.google.code.findbugs:jsr305:3+'
-   compile(group: 'com.google.guava', name: 'guava', version: '20.0')
+    compile(group: 'com.google.guava', name: 'guava', version: '20.0')
 }
