--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,11 @@ out/
 
 # Gradle files
 .gradle/
+gradle/**/gradle-wrapper.jar
 build/
+
+*.jar
+
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -34,11 +38,7 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/dictionaries
-.idea/libraries
+.idea/*
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
