--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'java'
+apply plugin: 'kotlin'
 
 group 'BrainSqueeze'
-version '0.0.0.1'
+version '1.0.0.0'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
     jcenter()
@@ -15,4 +16,26 @@ dependencies {
     testCompile "com.google.truth:truth:0.36"
     compile 'com.google.code.findbugs:jsr305:3+'
     compile(group: 'com.google.guava', name: 'guava', version: '20.0')
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+}
+buildscript {
+    ext.kotlin_version = '1.4.20'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "11"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "11"
+    }
 }
